# escaping

./: .gitignore  .mypy.ini  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: lint.yml  tests_and_coverage.yml  tests_and_coverage_old.yml
escape/: __init__.py  baked_escaper.py  errors.py  proxy_module.py  wrapper.py
exception_escaping/: __init__.py  proxy_module.py  wrapper.py
tests/: test_proxy_module.py
tests/documentation/: test_readme.py
tests/units/: test_baked_escaper.py  test_proxy_module.py
